<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_home"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_switchUser"
            android:title="Switch User"
            android:icon="@drawable/ic_people_black_24dp" />

        <item
            android:id="@+id/nav_newProduct"
            android:icon="@drawable/ic_add_new_product"
            android:title="@string/menu_addProduct" />
        <item
            android:id="@+id/nav_prdRequest"
            android:icon="@drawable/ic_vertical_align_bottom_black_24dp"
            android:title="Product Requests"/>
        <item
            android:id="@+id/nav_prdOrders"
            android:icon="@drawable/ic_vertical_align_top_black_24dp"
            android:title="Placed Orders"/>
        <item
            android:id="@+id/nav_urProduct"
            android:icon="@drawable/ic_view_your_products"
            android:title="@string/menu_yourProducts" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_logOut" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
